Add Loop through category and its item menu

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <section id="menu">
             <!-- Menu items will be dynamically generated here -->
+             <!-- Take list and assign prices -->
         </section>
         <section id="order">
             <h2>Your Order</h2>
